# accessibility-tool

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile.heroku  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: backend_deploy.yaml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/backend/: settings.py
frontend/: Dockerfile
nginx/: nginx.conf
